[package]
name = "options"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements-miniscript={git = "https://github.com/sanket1729/elements-miniscript", branch="new_cov_frags_followup"}
serde = "1.0.140"

[dev-dependencies]
elementsd = {version = "0.5.0", features=["0_21_0","bitcoind_22_0"]}
actual-rand = { package = "rand", version = "0.8.4"}