[package]
name = "options-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
options-lib = {path = "../options_lib", features = ["serde"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
elementsd = {version = "0.6.0"}
secp256k1 = {version = "0.24.0", features = ["global-context", "rand-std"]}
sled = "0.34.7"
actix-web = "4"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"

[[bin]]
name = "http-server"
path = "src/bin/http_server.rs"

[[bin]]
name = "opt-cli"
path = "src/bin/opt_cli.rs"